# AmigoBots

./: CMakeLists.txt  Client.cpp  Communication.cpp  Communication.h  Errors.cpp  MAJPos.cpp  MAJPos.h  PrintFiles.cpp  PrintFiles.h  README.md  Server.cpp  Sockets.cpp  functions.cpp  functions.h  main.cpp
src/TCP/: Client.hpp
